--- a/figures.ipynb
+++ b/figures.ipynb
@@ -48,7 +48,143 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Figure 1: Probabilistic Emergence of RAF in Simulation\n",
+    "### Figure 1: Visualization of Kauffman Network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import networkx as nx\n",
+    "from matplotlib.patches import FancyArrowPatch\n",
+    "\n",
+    "# Plotting code with assistance from GPT\n",
+    "\n",
+    "def draw_kauffman_network(molecules, foodset, reactions, catalysts,\n",
+    "                          layout='spring', seed=4, curve_strength=0.25):\n",
+    "    \"\"\"\n",
+    "    Visualize a Kauffman reaction network with styled molecule, reaction, and catalyst edges.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # --- Build the graph ---\n",
+    "    G = nx.DiGraph()\n",
+    "\n",
+    "    # Molecules and reactions as separate node types\n",
+    "    G.add_nodes_from(molecules, kind='molecule')\n",
+    "    G.add_nodes_from(reactions.keys(), kind='reaction')\n",
+    "\n",
+    "    # Add reaction edges\n",
+    "    for r, (reactants, products) in reactions.items():\n",
+    "        for x in reactants:\n",
+    "            G.add_edge(x, r, type='reaction')\n",
+    "        for y in products:\n",
+    "            G.add_edge(r, y, type='reaction')\n",
+    "\n",
+    "    # Add catalyst edges\n",
+    "    for mol, rlist in catalysts.items():\n",
+    "        for r in rlist:\n",
+    "            G.add_edge(mol, r, type='catalyst')\n",
+    "\n",
+    "    # --- Layout ---\n",
+    "    if layout == 'spring':\n",
+    "        pos = nx.spring_layout(G, seed=seed, k=0.8)\n",
+    "    elif layout == 'circular':\n",
+    "        pos = nx.circular_layout(G)\n",
+    "    else:\n",
+    "        pos = nx.kamada_kawai_layout(G)\n",
+    "\n",
+    "    # --- Draw nodes ---\n",
+    "    node_colors = []\n",
+    "    node_edges = []\n",
+    "    node_sizes = []\n",
+    "\n",
+    "    for n in G.nodes():\n",
+    "        if n in foodset:\n",
+    "            node_colors.append(\"#A8D8FF\")  # light blue (food)\n",
+    "        elif G.nodes[n]['kind'] == 'molecule':\n",
+    "            node_colors.append(\"white\")    # molecule\n",
+    "        else:\n",
+    "            node_colors.append(\"black\")    # reaction node\n",
+    "        node_edges.append(\"black\" if G.nodes[n]['kind'] == 'molecule' else \"none\")\n",
+    "        node_sizes.append(600 if G.nodes[n]['kind'] == 'molecule' else 300)\n",
+    "\n",
+    "    nx.draw_networkx_nodes(G, pos, node_color=node_colors,\n",
+    "                           edgecolors=node_edges, node_size=node_sizes)\n",
+    "\n",
+    "    ax = plt.gca()\n",
+    "\n",
+    "    # --- Edge drawing helper ---\n",
+    "    def curved_arrow(p1, p2, color, alpha, width, curve=curve_strength, zorder=0):\n",
+    "        arrow = FancyArrowPatch(p1, p2, connectionstyle=f\"arc3,rad={curve}\",\n",
+    "                                arrowstyle='-|>', mutation_scale=10,\n",
+    "                                lw=width, color=color, alpha=alpha,\n",
+    "                                zorder=zorder)\n",
+    "        ax.add_patch(arrow)\n",
+    "\n",
+    "    # --- Draw edges ---\n",
+    "    for u, v, data in G.edges(data=True):\n",
+    "        if data['type'] == 'reaction':\n",
+    "            curved_arrow(pos[u], pos[v], color='gray', alpha=0.5, width=0.8)\n",
+    "        elif data['type'] == 'catalyst':\n",
+    "            curved_arrow(pos[u], pos[v], color='skyblue', alpha=0.25, width=0.6, curve=-curve_strength)\n",
+    "\n",
+    "    # --- Labels ---\n",
+    "    for n, (x, y) in pos.items():\n",
+    "        plt.text(x, y, n, ha='center', va='center',\n",
+    "                 fontsize=9,\n",
+    "                 color='black' if G.nodes[n]['kind'] == 'molecule' else 'white')\n",
+    "\n",
+    "    plt.axis('off')\n",
+    "    plt.title(\"Kauffman Reaction Network\", fontsize=13)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(1, 2, figsize=(15,6 ))\n",
+    "\n",
+    "X,F,R = create_XFR(2)\n",
+    "\n",
+    "C = {2: ['AA'], 3: ['AA'], 6: ['AA'], 7: ['AA'], 0: ['AB', 'BB'], 1: ['AB', 'BB'],\n",
+    "     }\n",
+    "\n",
+    "# Left subplot\n",
+    "draw_kauffman_network(\n",
+    "    X, F, R, C,\n",
+    "    outer_radius=0.3, inner_radius=0.7, chaos_seed=1,node_size_mol=700, node_size_rxn=700, line_weight = 4,node_scale=2.0,\n",
+    "    fig=fig, ax=axes[0], title=\"n=2\",legend_fontsize = 14, show_labels = True\n",
+    ")\n",
+    "\n",
+    "\n",
+    "X,F,R = create_XFR(4)\n",
+    "C = create_uniform_catalysts(X, len(R), 1.25)\n",
+    "\n",
+    "# Right subplot\n",
+    "draw_kauffman_network(\n",
+    "    X, F, R, C,\n",
+    "    outer_radius=0.5, inner_radius=0.9, chaos_seed=10, node_size_mol=300, node_size_rxn=100,\n",
+    "    catalyst_color=\"#9E2A2B\", reaction_color=\"gray\",\n",
+    "    fig=fig, ax=axes[1], title=\"n=4\", include_legend=True,\n",
+    "    legend_loc=\"upper left\", legend_bbox=(1.02, 1.0),legend_fontsize = 20,\n",
+    ")\n",
+    "\n",
+    "label_panels(np.array(axes), fontsize = 24, weight='normal')\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Figure 2: Probabilistic Emergence of RAF in Simulation\n",
     "\n",
     "Plotting Data generated from RAF_Emergence_Sim.py"
    ]
@@ -106,7 +242,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Figure 3: RAF Emergence can be estimated by the complementary CDF of teh distribution of total catalysts"
+    "### Figure 4: RAF Emergence can be estimated by the complementary CDF of teh distribution of total catalysts"
    ]
   },
   {
@@ -335,7 +471,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Figure 4: Theoretical model explains RAF emergence across catalytic schemes"
+    "### Figure 5: Theoretical model explains RAF emergence across catalytic schemes"
    ]
   },
   {
@@ -815,7 +951,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Figure 5: Transition Sharpness can be explained by the derivative of the CDF"
+    "### Figure 6: Transition Sharpness can be explained by the derivative of the CDF"
    ]
   },
   {
